--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,8 @@ name: covid-data-auto
 # S'exécute tous le sjours à 20:00
 on:
   schedule:
-    - cron:  '0 18 * * *'
+#    - cron:  '0 18 * * *'
+     - cron:  '1/5 0 * * *' 
 
 
 jobs: 
