--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ name: covid-data-auto
 # S'exécute tous le sjours à 20:00 '0 18 * * *'
 on:
   schedule:
-    - cron:  '30 * * * *'
+    - cron:  '0 18 * * *'
     
     
 jobs: 
